<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="category_tabs"
        android:title="@string/pref_category_tabs_title">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_hide_reels"
            android:summary="@string/pref_hide_reels_summary"
            android:title="@string/pref_hide_reels_title"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_hide_shop"
            android:summary="@string/pref_hide_shop_summary"
            android:title="@string/pref_hide_shop_title"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_hide_explore"
            android:summary="@string/pref_hide_explore_summary"
            android:title="@string/pref_hide_explore_title"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_hide_threads"
            android:summary="@string/pref_hide_threads_summary"
            android:title="@string/pref_hide_threads_title"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_utilities"
        android:title="@string/pref_category_utilities_title">

        <Preference
            android:key="pref_clear_data"
            android:summary="@string/pref_clear_data_summary"
            android:title="@string/pref_clear_data_title"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

</PreferenceScreen>
